<resources>
    <string name="app_name">Hundir La Flota</string>
    <string name="credits">Por Rafael Cristian Barbieru</string>

    <string name="empezar">Empezar</string>
    <string name="temas">Temas</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="ayuda">Ayuda</string>

    <string name="ok">¡Entendido!</string>

    <string name="info_title">Ayuda</string>
    <string name="info_error_title">Error</string>
    <string name="info_msg_menu">
        - Para empezar el juego pincha en "Empezar"\n
        - Para cambiar de tema pincha en "Temas"\n
        - Para ver las mejores puntuaciones pincha en "Puntuaciones"\n
        - Si necesitas ayuda en cualquier sección puedes acceder a ella desde la barra superior.
    </string>
    <string name="info_msg_prep">
        En esta sección tienes que colocar tus barcos en tu tablero. La manera de hacerlo es
        eligiendo el tipo de barco que quieres colocar desde el menú superior y pinchar
        en una casilla del tablero para colocarlo.\n\n

        Tienes que colocar todos los barcos que se te dan; para saber cuántos te quedan por
        colocar se te mostrará un número al lado del tipo de cada barco en el menú superior.\n\n

        Al elgir un barco de más de una casilla deberás colocar la parte inferior del barco en una casilla
        de tu elección y la aplicación te colocará el resto del barco en las casillas superiores.\n
        ¡CUIDADO! No puedes colocar un barco en una casilla ocupada.
    </string>
    <string name="info_msg_partida">
        - Para cambiar de tablero pulsa en el botón de las flechas azules.\n
        - Ataca al enemigo pulsando en una de sus casillas.\n
        - No podrás atacar la misma casilla dos veces.\n
        - Tras tu ataque se mostrará si el ataque enemigo ha afectado a tus barcos.\n
        - Puedes cambiar de tablero en cualquier momento de la partida.\n
        - No puedes cambiar la posición de tus barcos una vez empezada la partida.\n
    </string>
    <string name="info_msg_saliendo_titulo">Saliendo de la partida</string>
    <string name="info_msg_saliendo_cuerpo">
        ¿Estás seguro de que quieres salir de la partida y volver al menú principal?\n
        ¡Todo el progreso se perderá!
    </string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="info_error_selecciona_barco">
        ¡Debes seleccionar un tipo de barco antes de poder colocarlo en el tablero!
    </string>
    <string name="info_error_posicion_invalida">
        ¡La posición que has elegido no permite que el resto del barco se cree!
        Coloca el barco de manera que haya suficiente espacio a la derecha para que
        el resto del barco se cree.
    </string>
    <string name="info_error_no_mas_barcos">
        ¡No quedan más barcos de este tipo!
    </string>

    <string name="info_error_no_cambiar">¡No puedes cambiar la posición de tus barcos durante la partida!</string>

    <string name="seleccionaElBarco">Selecciona el tipo de barco</string>
    <string name="fragata">Fragata (1 casilla)</string>
    <string name="buque">Buque de guerra (2 casillas verticales)</string>
    <string name="portaaviones">Portaaviones (3 casillas verticales)</string>
    <string name="necesarios">Barcos que quedan</string>
    <string name="puntos">Puntos:</string>
    <string name="veredictoGanado">¡Has ganado!</string>
    <string name="veredictoPerdido">¡Has perdido!</string>
    <string name="tupuntuacion">Tu puntuacion es:</string>
    <string name="noPuedesCambiar">No puedes cambiar la posición de tus barcos ahora mismo</string>
    <string name="enemigoAcertando">¡El enemigo ha acertado!</string>
    <string name="enemigoFallando">¡El enemigo ha fallado!</string>
    <string name="ataqueMismaPosicion">¡Ya has atacado esta posición!</string>

    <string name="theme_title">Selección de temas</string>
    <string-array name="theme_options">
        <item>Tema básico</item>
        <item>Tema premium</item>
    </string-array>
    <string name="theme_basic_toast">Se ha seleccionado el tema básico</string>
    <string name="theme_premium_toast">Se ha seleccionado el tema premium</string>

    <string name="difficulty_title">Selección de dificultad</string>
    <string-array name="difficulty_options">
        <item>Marinero</item>
        <item>Capitán</item>
        <item>Almirante</item>
    </string-array>

    <string name="titulo_tablero_jugador">Tu tablero</string>
    <string name="titulo_tablero_enemigo">Tablero del enemigo</string>
    <string name="barcos_restantes_enemigo">Barcos enemigos restantes:</string>
    <string name="barcos_restantes_jugador">Barcos aliados restantes:</string>

    <string name="nombre">Nombre</string>
    <string name="introduce_nombre">Introduce tu nombre para guardar la puntuación</string>
    <string name="guardar">Guardar</string>
    <string name="noHayPuntuaciones">No hay puntuaciones disponibles</string>

</resources>
