<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PrepareActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/tv_selecciona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/seleccionaElBarco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_necesarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:text="@string/necesarios"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="251dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selecciona">

        <RadioButton
            android:id="@+id/rbt_fragata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:text="@string/fragata"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbt_buque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buque"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbt_portaaviones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portaaviones"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_necesarios_fragata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="74dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/tv_necesarios" />

    <TextView
        android:id="@+id/tv_necesarios_buque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="74dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/tv_necesarios_fragata" />

    <TextView
        android:id="@+id/tv_necesarios_portaaviones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="74dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/tv_necesarios_buque" />

    <TableLayout
        android:id="@+id/tb_grid"
        android:layout_width="349dp"
        android:layout_height="349dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/ic_help_black_24dp"
        android:onClick="onButtonAyuda"
        app:layout_constraintStart_toEndOf="@+id/tv_selecciona"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_help_black_24dp" />

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:onClick="onButtonEmpezar"
        android:text="@string/empezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>